# cillers-hackathon-footway

./: README.md  polytope.yml
api/: pyproject.toml
api/src/: routes.py
api/src/api/: main.py  routes.py
api/src/api/clients/: footway.py  postgres.py  sinch.py
api/src/clients/: sinch.py
